--- a/respo/address-dev.properties
+++ b/respo/address-dev.properties
@@ -1,7 +1,10 @@
 
-
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=192.168.133.69
 spring.rabbitmq.port=5672
-server.port=8882
-hystrix.command.default.execution.timeout.enabled=false 
-management.security.enabled=false
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=advance.ai2016
+server.port=8881
+
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=true
+management.endpoints.web.exposure.include=*
