--- a/respo/address-dev.properties
+++ b/respo/address-dev.properties
@@ -2,7 +2,7 @@
 spring.rabbitmq.host=192.168.133.69
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=advance.ai2016
+spring.rabbitmq.password=.ai2016
 server.port=8881
 
 spring.cloud.bus.enabled=true
